retrieve (1)/src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Existing_Account__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_account__c</fullName>
        <label>Original account</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ReferFriend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReferFriend</label>
        <referenceTo>ReferFriend__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>one_to_one_relationship_with_ReferFriend</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Account__r.Name != null,
Account__r.Name  ==   PRIORVALUE(Existing_Account__c) )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>This Account is already associated with another record. Please choose another Account.</errorMessage>
    </validationRules>
</CustomObject>